--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,29 @@
+.biography {
+    position: relative;
+    bottom: 30px;
+    margin: 0 auto;
+    width: 100%;
+    padding: 0;
+    text-align: center;
+    font-size: 1.2em;
+    font-weight: bold;
+    color: gray;
+    background-color: #fff;
+}
+.image {
+    font-size: 75px;
+    
+    position: relative;
+    top: 20px;
+    left: 500px;
+}
+.text {
+    position: relative;
+    top: -50px;
+    text-align: center;
+    margin: 0px;
+    padding: 0px;
+}
 #home {
     font-size:  30px;
 }
@@ -7,7 +33,7 @@
     left: 60%;
     top: -100px;
     text-decoration: none;
-    color: hwb(0 0% 100%);
+    color: black;
     position: relative;
     
 
@@ -17,7 +43,7 @@
     left: 64%;
     top: -100px;
     text-decoration: none;
-    color: hsl(0, 0%, 0%);
+    color: black;
     position: relative;
     font-family: cursive;
 
